<resources>
    <string name="app_name">pubdriver</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="hint_email_phone">Phone Number / Email</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Name</string>
    <string name="hint_phone">Phone</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="btn_link_to_forgot_password">Forgot Password ?</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="pubs_spinner_prompt">Select Pubs</string>
    <string name="cartype_spinner_prompt">Select Car Type</string>
    <string name="title_transmission">TRANSMISSION TYPE</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_main_booking_fragment">BOOK YOUR DRIVER</string>
    <string name="btn_request_for_booking">BOOK NOW</string>
    <string name="title_main_booking_home_fragment">Welcome to Pub Drive</string>
    <string name="btn_suv">SUV</string>
    <string name="btn_mpv">MPV</string>
    <string name="btn_sedan">SEDAN</string>
    <string name="btn_hatchback">HATCHBACK</string>
    <string name="btn_luxury">LUXURY</string>
    <string name="booking_no">BOOKING NO : </string>
    <string name="booking_from">FROM : </string>
    <string name="booking_status">STATUS : </string>
    <string name="brn_view_details">View Details</string>
    <string name="field_required">This field is required</string>
    <string name="incorrect_drive_code">Driver code is invalid</string>
    <string name="booking_date">BOOKING DATE : </string>
    <string name="booking_from_pub">PICKUP VENUE : </string>
    <string name="brn_start_drive">START DRIVE</string>
    <string name="booking_travel_time">TRAVEL TIME : </string>
    <string name="booking_start_time">START TIME : </string>
    <string name="booking_end_time">END TIME :</string>
    <string name="booking_total_travel_time">TOTAL TRAVEL TIME :</string>
    <string name="mobile_number">MOBILE NUMBER :</string>
    <string name="licence_number">LICENCE NUMBER :</string>
    <string name="Other_Title">
            <![CDATA[
                Enter <B>OTHER</B> to pick other venue.
            ]]>
    </string>
    <string name="imgdesc">imgdesc</string>
    <string-array name="titles">
        <item>Home</item>
        <item>Tutorials</item>
        <item>My Apps</item>
        <item>OS Versions</item>
        <item>Tools</item>
        <item>About Us</item>
    </string-array>
    <string name="user_manual_paragraphs">
        \n<b>STEP - 1</b>\n\n
1. Sign up with your name, email id and phone number and become a member of pubdrivers.\n

2. Once you sign up, you will be automatically login to your account.\n

3. For the next time you can use the registered email id or phone number as the user name with the password to log in to your account.\n

4. If you forgot your password, you can request to reset by clicking in forgot password link.\n\n

<b>STEP - 2</b>\n\n
1. Once you login, you can book a driver by clicking on Book Driver link from left navigation menu.\n

2. Select the below options:\n

a. Pub Name\n
b. Transmission type of your car. We need to know whether your car is automatic gear or manual gear. We need to know this information while booking, so that we can filter and get you the best driver for your service.\n
c. Type of your car. We need to know the type of your car like whether it is hatchback or sedan or suv or mpl or luxury. We need to know this information while booking, so that we can filter and get you the best driver for your service.\n
d. aggree to the terms and condition by checking the checkbox.\n

3. Click on the button named "Book a Driver".\n

4. By this the request will be sent to pubdrivers and you will be getting a booking reference number.\n\n

<b>STEP - 3</b>\n\n
1. Now you can track the booking from the booking list menu. You can see the history of your booking here. The last booking record will be listed at the top.\n

2. Driver will be assinged to your request within five minutes of your booking. Once the driver is assiged, you can see the driver details on cliking the view detail button.\n

3. Driver will contact you or you can contact the driver if you need any clarification.\n\n

<b>STEP - 4</b>\n\n
1. Driver will come to the venue from were you booked. You can handover the car key to the driver.\n

2. Driver might ask you few clarification to get to know the condition of the car. So that he can drive accordingly.\n

3. The trip time starts when the driver trigger start from the driver app. You can monitor the live status from your booking detail page.\n\n

<b>STEP - 5</b>\n\n
1. When you reach the destination the driver triggers the end trip from the driver app.\n

2. Now the total trip charge will be generated. You can see the status and price break ups from the details page.\n

3. The soft copy of the bill will be send to your registed email id.\n

4. You can settle the amount by cash.\n

5. By this the trip ends.\n\n
    </string>
</resources>