<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_booking_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.oceanstyxx.pubdriver.activity.BookingDetailsActivity">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
         >

        <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/my_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            android:background="@color/colorPrimaryDark"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

        <RelativeLayout
            android:id="@+id/rl1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:background="@drawable/border"
            >

            <ImageView
                android:id="@+id/driverPhoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <TextView
                android:id="@+id/driverName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:textColor="@color/colorBlack"
                android:layout_toRightOf="@+id/driverPhoto"
                android:textSize="15sp"
                android:textStyle="bold"
                />


            <TextView
                android:id="@+id/mobileNumberTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:textColor="@color/colorBlack"
                android:text="@string/mobile_number"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_below="@+id/driverName"
                android:layout_toRightOf="@+id/driverPhoto"
                android:paddingTop="10dp"
                />

            <TextView
                android:id="@+id/mobileNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                android:layout_below="@+id/driverName"
                android:layout_toRightOf="@+id/mobileNumberTitle"
                android:textSize="15sp"
                android:paddingLeft="8dp"
                android:paddingTop="10dp"
                />

            <TextView
                android:id="@+id/licenceNumberTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:textColor="@color/colorBlack"
                android:text="@string/licence_number"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_below="@+id/mobileNumberTitle"
                android:layout_toRightOf="@+id/driverPhoto"
                android:paddingTop="10dp"
                />

            <TextView
                android:id="@+id/licenceNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                android:textSize="15sp"
                android:layout_toRightOf="@+id/licenceNumberTitle"
                android:layout_below="@+id/mobileNumber"
                android:paddingTop="10dp"
                android:paddingLeft="8dp"
                />
        </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="10dp"
        android:background="@drawable/border"
        >

        <TextView
            android:id="@+id/bookingNumberTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:textColor="@color/colorBlack"
            android:text="@string/booking_no"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            />

        <TextView
            android:id="@+id/bookingNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack"
            android:layout_toRightOf="@+id/bookingNumberTitle"
            android:textSize="15sp"
            android:paddingLeft="8dp"
            />

        <TextView
            android:id="@+id/bookingDateTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:textColor="@color/colorBlack"
            android:text="@string/booking_date"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_below="@+id/bookingNumberTitle"
            android:paddingTop="10dp"
            />

        <TextView
            android:id="@+id/bookingDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack"
            android:textSize="15sp"
            android:layout_toRightOf="@+id/bookingDateTitle"
            android:layout_below="@+id/bookingNumber"
            android:paddingTop="10dp"
            android:paddingLeft="8dp"
            />

        <TextView
            android:id="@+id/bookingFromPubTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack"
            android:text="@string/booking_from_pub"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_below="@+id/bookingDateTitle"
            android:paddingTop="10dp"
            />

        <TextView
            android:id="@+id/bookingFromPub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack"
            android:layout_toRightOf="@+id/bookingFromPubTitle"
            android:layout_below="@+id/bookingDate"
            android:textSize="15sp"
            android:paddingLeft="8dp"
            android:paddingTop="10dp"
            />

        <TextView
            android:id="@+id/bookingFromTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack"
            android:text="@string/booking_from"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_below="@+id/bookingFromPubTitle"
            android:paddingTop="10dp"
            />

        <TextView
            android:id="@+id/bookingFrom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack"
            android:layout_toRightOf="@+id/bookingFromTitle"
            android:layout_below="@+id/bookingFromPub"
            android:textSize="15sp"
            android:paddingLeft="8dp"
            android:paddingTop="10dp"
            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="10dp"
        android:background="@drawable/border"
        >
        <TextView
            android:id="@+id/bookingTravelTimeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:textColor="@color/colorBlack"
            android:text="@string/booking_travel_time"
            android:textSize="15sp"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/bookingTravelTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack"
            android:layout_toRightOf="@+id/bookingTravelTimeTitle"
            android:textSize="15sp"
            android:paddingLeft="8dp"
            />

        <TextView
            android:id="@+id/bookingStartTimeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:textColor="@color/colorBlack"
            android:text="@string/booking_start_time"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_below="@+id/bookingTravelTimeTitle"
            android:paddingTop="10dp"
            />

        <TextView
            android:id="@+id/bookingStartTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack"
            android:layout_toRightOf="@+id/bookingStartTimeTitle"
            android:layout_below="@+id/bookingTravelTimeTitle"
            android:textSize="15sp"
            android:paddingLeft="8dp"
            android:paddingTop="10dp"
            />

        <TextView
            android:id="@+id/bookingEndTimeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:textColor="@color/colorBlack"
            android:text="@string/booking_end_time"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_below="@+id/bookingStartTimeTitle"
            android:paddingTop="10dp"
            />

        <TextView
            android:id="@+id/bookingEndTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack"
            android:layout_toRightOf="@+id/bookingEndTimeTitle"
            android:layout_below="@+id/bookingStartTime"
            android:textSize="15sp"
            android:paddingLeft="8dp"
            android:paddingTop="10dp"
            />

        <TextView
            android:id="@+id/bookingTotalTravelTimeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:textColor="@color/colorBlack"
            android:text="@string/booking_total_travel_time"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_below="@+id/bookingEndTimeTitle"
            android:paddingTop="10dp"
            />

        <TextView
            android:id="@+id/bookingTotalTravelTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack"
            android:layout_toRightOf="@+id/bookingTotalTravelTimeTitle"
            android:layout_below="@+id/bookingEndTime"
            android:textSize="15sp"
            android:paddingLeft="8dp"
            android:paddingTop="10dp"
            />

    </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl4"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:background="@drawable/border"
            >
            <ScrollView
                android:id="@+id/scrollView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TableLayout
                    android:id="@+id/tableInvoices"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="0dp"
                    android:stretchColumns="*"
                    >
                </TableLayout>

            </ScrollView>

            <TextView
                android:id="@+id/bookingTotalTitle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                android:layout_below="@+id/scrollView"
                android:textSize="23sp"
                android:paddingBottom="5dp"
                android:text="Total :"
                android:textStyle="bold"
                android:paddingTop="10dp"
                />
            <TextView
                android:id="@+id/bookingTotal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                android:textSize="23sp"
                android:gravity="right"
                android:paddingBottom="5dp"
                android:layout_below="@+id/scrollView"
                android:textStyle="bold"
                android:text="RS 400.00"
                android:paddingTop="10dp"
                />
        </RelativeLayout>

    </LinearLayout>
</RelativeLayout>
